dfir_rs/tests/compile-fail-stable/surface_demuxenum_port_missing.stderr
error[E0308]: mismatched types
  --> tests/compile-fail-stable/surface_demuxenum_port_missing.rs:17:15
   |
17 |         ]) -> demux_enum::<Shape>();
   |               ^^^^^^^^^^
   |               |
   |               expected a tuple with 3 elements, found one with 2 elements
   |               arguments to this function are incorrect
   |
   = note: expected tuple `(Pin<&mut _>, Pin<&mut _>, Pin<&mut _>)`
              found tuple `(Pin<&mut dfir_rs::sinktools::for_each::ForEach<fn(_) {std::mem::drop::<_>}>>, Pin<&mut dfir_rs::sinktools::for_each::ForEach<fn(_) {std::mem::drop::<_>}>>)`
help: the return type of this call is `(Pin<&mut dfir_rs::sinktools::for_each::ForEach<fn(_) {std::mem::drop::<_>}>>, Pin<&mut dfir_rs::sinktools::for_each::ForEach<fn(_) {std::mem::drop::<_>}>>)` due to the type of the argument passed
  --> tests/compile-fail-stable/surface_demuxenum_port_missing.rs:17:15
   |
17 |         ]) -> demux_enum::<Shape>();
   |               ^^^^^^^^^^ this argument influences the return type of `demux_enum_guard`
note: function defined here
  --> tests/compile-fail-stable/surface_demuxenum_port_missing.rs:17:15
   |
17 |         ]) -> demux_enum::<Shape>();
   |               ^^^^^^^^^^
